--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -168,10 +168,10 @@
                         <div class="image-layer" style="background-image:url(images/1.jpg)"></div>
                         <div class="auto-container">
                             <div class="content">
-                                <h2>We make dream <br> home a reality</h2>
-                                <div class="text">Since 1989, We inspired fragments of your life stories with the finest kitchens, wardrobes, bedroom sets and living & dining.</div>
+                                <h2>Student-Led, <br>STEM-focused </h2>
+                                <div class="text">Using our personal knowledge and experience, we make learning STEM related subjects easier for everyone.</div>
                                 <div class="btns-box">
-                                    <a href="#" class="theme-btn btn-style-one"><span class="txt">Know more</span></a>
+                                    <a href="about.html" class="theme-btn btn-style-one"><span class="txt">Learn more</span></a>
                                 </div>
                             </div>
                         </div>
@@ -182,10 +182,10 @@
                         <div class="image-layer" style="background-image:url(images/1.jpg)"></div>
                         <div class="auto-container">
                             <div class="content">
-                                <h2>Designs Benefitting <br> Your Persona</h2>
-                                <div class="text">Since 1989, We inspired fragments of your life stories with the finest kitchens, wardrobes, bedroom sets and living & dining.</div>
+                                <h2>Online, Free, <br> and Personalized</h2>
+                                <div class="text">During the on-going pandemic, we make learning more accessible.</div>
                                 <div class="btns-box">
-                                    <a href="#" class="theme-btn btn-style-one"><span class="txt">Know more</span></a>
+                                    <a href="service.html" class="theme-btn btn-style-one"><span class="txt">Learn more</span></a>
                                 </div>
                             </div>
                         </div>
@@ -196,10 +196,10 @@
                         <div class="image-layer" style="background-image:url(images/1.jpg)"></div>
                         <div class="auto-container">
                             <div class="content">
-                                <h2>Solution for <br> Modern Kitchen</h2>
-                                <div class="text">Since 1989, We inspired fragments of your life stories with the finest kitchens, wardrobes, bedroom sets and living & dining.</div>
+                                <h2>Action Potentials</h2>
+                                <div class="text">Get in touch with us, and start your learning journey!</div>
                                 <div class="btns-box">
-                                    <a href="#" class="theme-btn btn-style-one"><span class="txt">Know more</span></a>
+                                    <a href="contact.html" class="theme-btn btn-style-one"><span class="txt">Join now</span></a>
                                 </div>
                             </div>
                         </div>
