--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Action Potentials - A Student-Led STEM Environment | Home </title>
+    <title>Home | Action Potentials - A Student-Led STEM Environment</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -91,7 +91,7 @@
                                                 <li><a href="services-tutorials1.html">Tutorials</a></li>
                                                 <li><a href="services-resources.html">Learning Resources</a></li>
                                                 <li><a href="services-publishing.html">Published Projects</a></li>
-                                                <li><a href="join-us.html">Join Us</a></li>
+                                                <li><a href="join-us.html">Join us</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown"><a href="services-publishing.html">Projects</a>
@@ -104,11 +104,11 @@
                                         </li>
                                         <li class="dropdown"><a href="sessions.html">Book your Sessions</a>
                                             <ul>
-                                                <li><a href="calendar.html">Check our Avaliabilities</a></li>
+                                                <li><a href="calendar.html">Check our Availabilities</a></li>
                                                 <li><a href="contact.html">Contact us</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="feedback.html">Feedback</a></li>
+                                        <li><a href="feedback.html">Give us Feedback</a></li>
                                         <li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </div>
@@ -183,7 +183,7 @@
                         <div class="auto-container">
                             <div class="content">
                                 <h2>Online, Free, <br> and Personalized</h2>
-                                <div class="text">During the on-going pandemic, we make learning more accessible.</div>
+                                <div class="text">During the on-going pandemic, we make learning more accessible for all.</div>
                                 <div class="btns-box">
                                     <a href="service.html" class="theme-btn btn-style-one"><span class="txt">Learn more</span></a>
                                 </div>
@@ -196,8 +196,8 @@
                         <div class="image-layer" style="background-image:url(images/1.jpg)"></div>
                         <div class="auto-container">
                             <div class="content">
-                                <h2>Action Potentials</h2>
-                                <div class="text">Get in touch with us, and start your learning journey!</div>
+                                <h2>Action <br>Potentials</h2>
+                                <div class="text">Get in touch with us and join a student-led learning community. Take action and reach your potentials!</div>
                                 <div class="btns-box">
                                     <a href="contact.html" class="theme-btn btn-style-one"><span class="txt">Join now</span></a>
                                 </div>
