--- a/Action_Potentials_Website_Self/contact.html
+++ b/Action_Potentials_Website_Self/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Action Potentials - A Student-Led STEM Environment | Home </title>
+    <title>Contact us | Action Potentials - A Student-Led STEM Environment</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -91,7 +91,7 @@
                                                 <li><a href="services-tutorials1.html">Tutorials</a></li>
                                                 <li><a href="services-resources.html">Learning Resources</a></li>
                                                 <li><a href="services-publishing.html">Published Projects</a></li>
-                                                <li><a href="join-us.html">Join Us</a></li>
+                                                <li><a href="join-us.html">Join us</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown"><a href="services-publishing.html">Projects</a>
