--- a/Action_Potentials_Website_Self/join-us.html
+++ b/Action_Potentials_Website_Self/join-us.html
@@ -104,7 +104,7 @@
                                         </li>
                                         <li class="dropdown"><a href="sessions.html">Book your Sessions</a>
                                             <ul>
-                                                <li><a href="calendar.html">Check our Avaliabilities</a></li>
+                                                <li><a href="calendar.html">Check our Availabilities</a></li>
                                                 <li><a href="contact.html">Contact us</a></li>
                                             </ul>
                                         </li>
