--- a/Action_Potentials_Website_Self/contact.html
+++ b/Action_Potentials_Website_Self/contact.html
@@ -104,7 +104,7 @@
                                         </li>
                                         <li class="dropdown"><a href="sessions.html">Book your Sessions</a>
                                             <ul>
-                                                <li><a href="calendar.html">Check our Avaliabilities</a></li>
+                                                <li><a href="calendar.html">Check our Availabilities</a></li>
                                                 <li><a href="contact.html">Contact us</a></li>
                                             </ul>
                                         </li>
@@ -201,10 +201,10 @@
                                         <h2>Quick links</h2>
                                         <div class="widget-content">
                                             <ul class="list">
-                                                <li><a href="#">About us</a></li>
-                                                <li><a href="#">Contact Us</a></li>
-                                                <li><a href="#">Our Projects</a></li>
-                                                <li><a href="#">Back to Top</a></li>
+                                                <li><a href="about.html">About us</a></li>
+                                                <li><a href="contact.html">Contact us</a></li>
+                                                <li><a href="projects.html">Our Projects</a></li>
+                                                <li><a href="Index.html">Back to Top</a></li>
                                             </ul>
                                         </div>
                                     </div>
