--- a/Action_Potentials_Website_Self/join-us.html
+++ b/Action_Potentials_Website_Self/join-us.html
@@ -91,7 +91,7 @@
                                                 <li><a href="services-tutorials1.html">Tutorials</a></li>
                                                 <li><a href="services-resources.html">Learning Resources</a></li>
                                                 <li><a href="services-publishing.html">Published Projects</a></li>
-                                                <li><a href="join-us.html">Join Us</a></li>
+                                                <li><a href="join-us.html">Join us</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown"><a href="services-publishing.html">Projects</a>
@@ -201,10 +201,10 @@
                                         <h2>Quick links</h2>
                                         <div class="widget-content">
                                             <ul class="list">
-                                                <li><a href="#">About us</a></li>
-                                                <li><a href="#">Contact Us</a></li>
-                                                <li><a href="#">Our Projects</a></li>
-                                                <li><a href="#">Back to Top</a></li>
+                                                <li><a href="about.html">About us</a></li>
+                                                <li><a href="contact.html">Contact us</a></li>
+                                                <li><a href="projects.html">Our Projects</a></li>
+                                                <li><a href="Index.html">Back to Top</a></li>
                                             </ul>
                                         </div>
                                     </div>
