--- a/Action_Potentials_Website_Self/projects-others.html
+++ b/Action_Potentials_Website_Self/projects-others.html
@@ -167,7 +167,6 @@
 
 
 
-
         <!--Main Footer-->
         <footer class="main-footer">
             <div class="auto-container">
@@ -201,10 +200,10 @@
                                         <h2>Quick links</h2>
                                         <div class="widget-content">
                                             <ul class="list">
-                                                <li><a href="#">About us</a></li>
-                                                <li><a href="#">Contact Us</a></li>
-                                                <li><a href="#">Our Projects</a></li>
-                                                <li><a href="#">Back to Top</a></li>
+                                                <li><a href="about.html">About us</a></li>
+                                                <li><a href="contact.html">Contact us</a></li>
+                                                <li><a href="projects.html">Our Projects</a></li>
+                                                <li><a href="Index.html">Back to Top</a></li>
                                             </ul>
                                         </div>
                                     </div>
