--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--gibberish-->
 <head>
     <meta charset="utf-8">
     <title>Action Potentials - A Student-Led STEM Environment | Home </title>
