grammar search bar fix

--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Home | Action Potentials - A Student-Led STEM Environment</title>
@@ -962,7 +963,7 @@
                     <br>
                     <br>
                     <br>
-                    <p>We are currently experience issues with the search bar. Please click "Search Now" to return to home page.</p>
+                    <p>We are currently experiencing issues with the search bar. Please click "Search Now" to return to home page.</p>
                     <p>Sorry for the inconvenience.</p>
                     <br>
                 </div>
