--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -600,8 +600,8 @@
         <!-- Call To Action Section -->
         <section class="call-to-action-section" style="background-image: url(images/background/1.jpg)">
             <div class="auto-container">
-                <h2>Think Interior. Think Stella Orr'e</h2>
-                <div class="text">Interiors for all styles and budgets, Choose from thousands of <br> designs. Heart your favorites to shortlist.</div>
+                <h2>Take Action and Reach Your Potentials!</h2>
+                <div class="text">As a student-led learning community,<br> we make learning STEM subjects easier and more accessible.</div>
                 <a href="contact.html" class="theme-btn btn-style-two"><span class="txt">contact us</span></a>
             </div>
         </section>
