--- a/Action_Potentials_Website_Self/join-us.html
+++ b/Action_Potentials_Website_Self/join-us.html
@@ -154,19 +154,18 @@
         </header>
         <!-- End Main Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!--Page Title-->
+        <section class="page-title" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+                <h2>Join Us</h2>
+                <ul class="page-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="service.html">Service</a></li>
+                    <li>Join Us</li>
+                </ul>
+            </div>
+        </section>
+        <!--End Page Title-->
 
         <!--Main Footer-->
         <footer class="main-footer">
