--- a/Action_Potentials_Website_Self/about.html
+++ b/Action_Potentials_Website_Self/about.html
@@ -154,18 +154,17 @@
         </header>
         <!-- End Main Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
+        <!--Page Title-->
+        <section class="page-title" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+                <h2>About Us</h2>
+                <ul class="page-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+        </section>
+        <!--End Page Title-->
 
 
         <!--Main Footer-->
