--- a/Action_Potentials_Website_Self/calendar.html
+++ b/Action_Potentials_Website_Self/calendar.html
@@ -154,19 +154,18 @@
         </header>
         <!-- End Main Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!--Page Title-->
+        <section class="page-title" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+                <h2>Check Our Availabilities</h2>
+                <ul class="page-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sessions.html">Book Your Sessions</a></li>
+                    <li>Check Our Availabilities</li>
+                </ul>
+            </div>
+        </section>
+        <!--End Page Title-->
 
         <!--Main Footer-->
         <footer class="main-footer">
