--- a/Action_Potentials_Website_Self/contact.html
+++ b/Action_Potentials_Website_Self/contact.html
@@ -157,14 +157,17 @@
 
 
 
-
-
-
-
-
-
-
-
+        <!--Page Title-->
+        <section class="page-title" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+                <h2>Contact Us</h2>
+                <ul class="page-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+        </section>
+        <!--End Page Title-->
 
 
 
