--- a/Action_Potentials_Website_Self/projects-other.html
+++ b/Action_Potentials_Website_Self/projects-other.html
@@ -160,7 +160,7 @@
                 <h2>Other Projects</h2>
                 <ul class="page-breadcrumb">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="services-publishing.html">Projects</a></li>
                     <li>Other Projects</li>
                 </ul>
             </div>
