--- a/Action_Potentials_Website_Self/projects-research.html
+++ b/Action_Potentials_Website_Self/projects-research.html
@@ -154,18 +154,18 @@
         </header>
         <!-- End Main Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
+        <!--Page Title-->
+        <section class="page-title" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+                <h2>Research Projects</h2>
+                <ul class="page-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services-publishing.html">Projects</a></li>
+                    <li>Research Projects</li>
+                </ul>
+            </div>
+        </section>
+        <!--End Page Title-->
 
         <!--Main Footer-->
         <footer class="main-footer">
