--- a/Action_Potentials_Website_Self/projects-studies.html
+++ b/Action_Potentials_Website_Self/projects-studies.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Studies | Action Potentials - A Student-Led STEM Environment </title>
+    <title> Studies | Action Potentials - A Student-Led STEM Environment</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -154,19 +154,18 @@
         </header>
         <!-- End Main Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!--Page Title-->
+        <section class="page-title" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+                <h2>Studies</h2>
+                <ul class="page-breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services-publishing.html">Projects</a></li>
+                    <li>Studies</li>
+                </ul>
+            </div>
+        </section>
+        <!--End Page Title-->
 
         <!--Main Footer-->
         <footer class="main-footer">
