--- a/Action_Potentials_Website_Self/calendar.html
+++ b/Action_Potentials_Website_Self/calendar.html
@@ -167,6 +167,19 @@
         </section>
         <!--End Page Title-->
 
+        <!--Calendar Placeholder Form-->
+        <div class="calendar-form">
+            <form method="post" action="templateshub.net">
+                 <div class="form-group">
+                    <input type="email" name="email" value="" placeholder="Enter your email address">
+                    <div class="form-submission-button">
+                    <a type="submit" class="theme-btn btn-style-one" href="https://forms.gle/aRRytftf1ypV1ZoB7"><span class="txt">Book Your Session Now</span></a>
+                </div>
+            </div>
+            </form>
+        </div>
+        <!--End Calendar Placeholder Form-->
+
         <!--Main Footer-->
         <footer class="main-footer">
             <div class="auto-container">
