--- a/Action_Potentials_Website_Self/calendar.html
+++ b/Action_Potentials_Website_Self/calendar.html
@@ -168,15 +168,22 @@
         <!--End Page Title-->
 
         <!--Calendar Placeholder Form-->
-        <div class="calendar-form">
-            <form method="post" action="templateshub.net">
-                 <div class="form-group">
-                    <input type="email" name="email" value="" placeholder="Enter your email address">
-                    <div class="form-submission-button">
-                    <a type="submit" class="theme-btn btn-style-one" href="https://forms.gle/aRRytftf1ypV1ZoB7"><span class="txt">Book Your Session Now</span></a>
-                </div>
+        <div class="calendar-placeholder">
+            <p class="calendar-placeholder-p">Sorry, the calendar function is currently unavailable. <br> Please fill out the following form and get in touch with us. <br>Sorry for your inconvenience.</p>
+            <div class="calendar-form">
+                <form method="post" action="#">
+                    <div class="form-group">
+                        <div class="calendar-form-group">
+                            <input class="calendar-form-input" type="email" name="email" value="" placeholder="Enter your email address">
+                            <div class="form-submission-button">
+                                <div class="calendar-form-submit">
+                                    <a type="submit" class="theme-btn btn-style-one" href="https://forms.gle/aRRytftf1ypV1ZoB7"><span class="txt">Book Your Session Now</span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
-            </form>
         </div>
         <!--End Calendar Placeholder Form-->
 
