--- a/Action_Potentials_Website_Self/template.html
+++ b/Action_Potentials_Website_Self/template.html
@@ -239,7 +239,7 @@
                                         <div class="text">Let us know what you think</div>
                                         <!-- Newsletter Form -->
                                         <div class="newsletter-form">
-                                            <form method="post" action="templateshub.net">
+                                            <form method="post" action="#">
                                                 <div class="form-group">
                                                     <input type="email" name="email" value="" placeholder="Enter your email address">
                                                     <div class="form-submission-button">
