--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -304,11 +304,14 @@
                     <div class="service-block col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image">
-                                <a href="service.html"><img src="images/resource/service-1.jpg" alt="" /></a>
+                                <div class="coda-kid">
+                                    <a href="service.html"><img src="images/kids-coding.jpg" alt="" /></a>
+                                    <p class="coda-kid-image">Image from Coda Kid (https://codakid.com/best-programming-language-kids/)</p>
+                                </div>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="service.html">Highly Personalized</a></h3>
-                                <div class="text">Proactively envisioned multimedia based exper tise and cross-media growth strategies.</div>
+                                <div class="text">Get in touch with us, let us know your goals, and we will personalize your learning to help you achieve your goals.</div>
                                 <a href="service.html" class="read-more">Read more</a>
                             </div>
                         </div>
@@ -318,7 +321,10 @@
                     <div class="service-block col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image">
-                                <a href="services-tutorials1.html"><img src="images/resource/service-2.jpg" alt="" /></a>
+                                <div class="lifewire">
+                                    <a href="services-tutorials1.html"><img src="images/lego-1-on-1.jpg" alt="" /></a>
+                                    <p class="lifewire-image">Image from LifeWire (https://www.lifewire.com/<br>kids-programming-languages-4125938)</p>
+                                </div>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="services-tutorials1.html">1-on-1 Support</a></h3>
