--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -341,8 +341,8 @@
                                 <a href="service.html"><img src="images/resource/service-3.jpg" alt="" /></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="service.html">Commercial Interiors</a></h3>
-                                <div class="text">Proactively envisioned multimedia based exper tise and cross-media growth strategies. Seam lessly visualize quality intellectual.</div>
+                                <h3><a href="service.html">Student-Led</a></h3>
+                                <div class="text">We are a pair of high school students with first-hand experience that will help you to reach your potentials. </div>
                                 <a href="service.html" class="read-more">Read more</a>
                             </div>
                         </div>
