--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -338,7 +338,10 @@
                     <div class="service-block col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image">
-                                <a href="service.html"><img src="images/resource/service-3.jpg" alt="" /></a>
+                            <div class="student-led-">
+                                <a href="service.html"><img src="images/student-led.jpg" alt="" /></a>
+                                <p class="student-led">Image source: (https://i.ytimg.com/vi/ANSh-o_yiVo/maxresdefault.jpg))</p>
+                            </div>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="service.html">Student-Led</a></h3>
@@ -360,7 +363,7 @@
                 <!-- Sec Title -->
                 <div class="sec-title">
                     <h2>Our Programs</h2>
-                    <div class="text">Osed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numquam qui ratione voluptatem sequi nesciunt.</div>
+                    <div class="text">We offer free, interactive, STEM-related learning resources. Whether it is an online course through a video tutorial series, a summer coding camp, or a one-on-one tutorials, we allow you to learn proactively in the comfort of home.</div>
                 </div>
 
                 <div class="row clearfix">
@@ -372,8 +375,8 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-desk-1"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Office Interior</a></h3>
-                                <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
+                                <h3><a href="office-interior.html">Our Online Learning Resources</a></h3>
+                                <div class="text">We offer a broad range of online learning resources for students to access and acquire new STEM-related skills.</div>
                                 <a href="office-interior.html" class="read-more">Read More</a>
                             </div>
                         </div>
@@ -386,8 +389,8 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-house-1"></span>
                                 </div>
-                                <h3><a href="office-interior.html">House Interior</a></h3>
-                                <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
+                                <h3><a href="office-interior.html">Our One-on-One Tutorials</a></h3>
+                                <div class="text">We offer free, Zoom-based 1-on-1 tutorials for prospective students to personalize their learning.</div>
                                 <a href="office-interior.html" class="read-more">Read More</a>
                             </div>
                         </div>
@@ -400,7 +403,7 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-shop"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Restaurant Interior</a></h3>
+                                <h3><a href="office-interior.html">Our Summer Coding Programs</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
                                 <a href="office-interior.html" class="read-more">Read More</a>
                             </div>
@@ -414,7 +417,7 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-hospital"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Hospital Interior</a></h3>
+                                <h3><a href="office-interior.html">Volunteering</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
                                 <a href="office-interior.html" class="read-more">Read More</a>
                             </div>
@@ -428,7 +431,7 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-apartment-1"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Appartment Interior</a></h3>
+                                <h3><a href="office-interior.html">Research Projects</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
                                 <a href="office-interior.html" class="read-more">Read More</a>
                             </div>
@@ -442,7 +445,7 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-hotel"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Hospitality Interior</a></h3>
+                                <h3><a href="office-interior.html">Publishing Resources</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
                                 <a href="office-interior.html" class="read-more">Read More</a>
                             </div>
@@ -475,7 +478,7 @@
                                 <div class="feature-number">1</div>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="residental-interior.html">Meet Customers</a></h3>
+                                <h3><a href="residental-interior.html">Meet Prospective Students</a></h3>
                                 <div class="text">Osed quia consequuntur magni dolores eos qui rati one volu ptatem sequi nesciunt.</div>
                             </div>
                         </div>
@@ -491,7 +494,7 @@
                                 <div class="feature-number">2</div>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="residental-interior.html">Design Discussion</a></h3>
+                                <h3><a href="residental-interior.html">Discuss with Prospective Students</a></h3>
                                 <div class="text">Osed quia consequuntur magni dolores eos qui rati one volu ptatem sequi nesciunt.</div>
                             </div>
                         </div>
@@ -507,7 +510,7 @@
                                 <div class="feature-number">3</div>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="residental-interior.html">Drafting Design</a></h3>
+                                <h3><a href="residental-interior.html">Personalizing Learning Plan</a></h3>
                                 <div class="text">Osed quia consequuntur magni dolores eos qui rati one volu ptatem sequi nesciunt.</div>
                             </div>
                         </div>
@@ -523,7 +526,7 @@
                                 <div class="feature-number">4</div>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="residental-interior.html">Implimentation</a></h3>
+                                <h3><a href="residental-interior.html">Start Learning and Reach Potentials</a></h3>
                                 <div class="text">Osed quia consequuntur magni dolores eos qui rati one volu ptatem sequi nesciunt.</div>
                             </div>
                         </div>
