--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -375,9 +375,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-desk-1"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Our Online Learning Resources</a></h3>
+                                <h3><a href="service-resources.html">Our Online Learning Resources</a></h3>
                                 <div class="text">We offer a broad range of online learning resources for students to access and acquire new STEM-related skills.</div>
-                                <a href="office-interior.html" class="read-more">Read More</a>
+                                <a href="service-resources.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -389,9 +389,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-house-1"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Our One-on-One Tutorials</a></h3>
+                                <h3><a href="service-tutorials1.html">Our One-on-One Tutorials</a></h3>
                                 <div class="text">We offer free, Zoom-based 1-on-1 tutorials for prospective students to personalize their learning.</div>
-                                <a href="office-interior.html" class="read-more">Read More</a>
+                                <a href="service-tutorials1.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -403,9 +403,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-shop"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Our Summer Coding Programs</a></h3>
-                                <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
-                                <a href="office-interior.html" class="read-more">Read More</a>
+                                <h3><a href="summer-program.html">Our Summer Coding Programs</a></h3>
+                                <div class="text">This summer, we are hosting our inaugural coding summer camp for interested students to learn the basics of STEM.</div>
+                                <a href="summer-program.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -417,9 +417,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-hospital"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Volunteering</a></h3>
+                                <h3><a href="join-us.html">Volunteering</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
-                                <a href="office-interior.html" class="read-more">Read More</a>
+                                <a href="join-us.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
