--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -338,10 +338,10 @@
                     <div class="service-block col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image">
-                            <div class="student-led-">
-                                <a href="service.html"><img src="images/student-led.jpg" alt="" /></a>
-                                <p class="student-led">Image source: (https://i.ytimg.com/vi/ANSh-o_yiVo/maxresdefault.jpg))</p>
-                            </div>
+                                <div class="student-led-">
+                                    <a href="service.html"><img src="images/student-led.jpg" alt="" /></a>
+                                    <p class="student-led">Image source: (https://i.ytimg.com/vi/ANSh-o_yiVo/maxresdefault.jpg))</p>
+                                </div>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="service.html">Student-Led</a></h3>
@@ -543,10 +543,12 @@
             <div class="auto-container">
                 <!-- Sec Title -->
                 <div class="sec-title">
-                    <h2>Need a design fix? Read our magazine</h2>
-                    <div class="text">Stay updated with latest trends, inspiration, expert tips, DIYs and more</div>
+                    <h2>Checkout our Research and Blogs.</h2>
+                    <div class="text">Stay updated with our program updates and the latest high school research projects.</div>
                 </div>
-
+                <!--PlaceHolder line-->
+                <p class="placeholderline"><b><i>More contents are coming!</i></b></p>
+                <!--End PlaceHolder line-->
                 <div class="row clearfix">
 
                     <!-- News Block -->
