--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -375,9 +375,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-desk-1"></span>
                                 </div>
-                                <h3><a href="service-resources.html">Our Online Learning Resources</a></h3>
+                                <h3><a href="services-resources.html">Our Online Learning Resources</a></h3>
                                 <div class="text">We offer a broad range of online learning resources for students to access and acquire new STEM-related skills.</div>
-                                <a href="service-resources.html" class="read-more">Read More</a>
+                                <a href="services-resources.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -389,9 +389,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-house-1"></span>
                                 </div>
-                                <h3><a href="service-tutorials1.html">Our One-on-One Tutorials</a></h3>
+                                <h3><a href="services-tutorials1.html">Our One-on-One Tutorials</a></h3>
                                 <div class="text">We offer free, Zoom-based 1-on-1 tutorials for prospective students to personalize their learning.</div>
-                                <a href="service-tutorials1.html" class="read-more">Read More</a>
+                                <a href="services-tutorials1.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -431,9 +431,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-apartment-1"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Research Projects</a></h3>
+                                <h3><a href="projects-research.html">Research Projects</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
-                                <a href="office-interior.html" class="read-more">Read More</a>
+                                <a href="projects-research.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -445,9 +445,9 @@
                                 <div class="icon-box">
                                     <span class="icon flaticon-hotel"></span>
                                 </div>
-                                <h3><a href="office-interior.html">Publishing Resources</a></h3>
+                                <h3><a href="services-publishing.html">Publishing Resources</a></h3>
                                 <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
-                                <a href="office-interior.html" class="read-more">Read More</a>
+                                <a href="services-publishing.html" class="read-more">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -459,15 +459,13 @@
         <!-- End Services Section Two -->
 
         <!-- Featured Section -->
-        <section class="featured-section" style="background-image: url(images/background/2.jpg)">
+        <section class="featured-section" style="background-image: url(images/background-1.jpeg)">
             <div class="auto-container">
                 <!-- Title Box -->
                 <div class="title-box">
                     <h2>Our Work Process</h2>
                 </div>
-
                 <div class="row clearfix">
-
                     <!-- Feature Block -->
                     <div class="feature-block col-lg-3 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
@@ -531,15 +529,17 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
+            </div>
+            <div class="background-1-cite">
+                <a href="https://bingekulture.com/thimble-teaches-kids-stem-skills-with-robotics-kits-combined-with-live-zoom-classes/"><b>Image Source: (https://bingekulture.com/thimble-teaches-kids-stem-skills-with-robotics-kits-combined-with-live-zoom-classes/)</b></a>
             </div>
         </section>
         <!-- End Featured Section -->
 
         <!-- News Section -->
         <section class="news-section">
+
             <div class="auto-container">
                 <!-- Sec Title -->
                 <div class="sec-title">
