--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -279,7 +279,7 @@
                                     </div>
                                 </div>
                                 <h3>Grace Yu</h3>
-                                <div class="title">#</div>
+                                <div class="title">A Committed and Passionate Engineer with Experience in CAD, Robotics, Data Science.</div>
                                 <div class="text">Osed quia consequuntur magni dolores eos qui rati one voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numqua.</div>
                             </div>
                         </div>
