--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -201,6 +201,116 @@
         </section>
         <!-- End Story Section -->
 
+        <!--Program Detail-->
+        <div class="auto-container">
+            <h2>Our Program</h2>
+            <div class="row clearfix">
+                <div class="content-column col-lg-12 col-md-12 col-sm-12">
+                    <div class="inner-column">
+                        <div class="bold-text">Timeline, Syllabus, and Details</div>
+                    </div>
+                    <div class="table">
+                        <div class="text">
+                            <br>
+                            <p>We welcomes interested students between grade 5-9 to attend our inaugral Summer STEM Program. </p>
+                            <h5>Timeline</h5>
+                            <table width="100%">
+                                <tr>
+                                    <th>Week </th>
+                                    <th>Date </th>
+                                    <th>Activities </th>
+                                    <th>Details </th>
+                                </tr>
+                                <tr>
+                                    <td>0</td>
+                                    <td>July 12, 2021</td>
+                                    <td>Opening Covocation</td>
+                                    <td>Introduction to the prorgam, timeline, and tech-requirments</td>
+                                </tr>
+                                <tr>
+                                    <td>0</td>
+                                    <td>July 14, 2021</td>
+                                    <td>Tech-Troubleshoot Session 1</td>
+                                    <td>Optional, attend if encounter any tech issues</td>
+                                </tr>
+                                <tr>
+                                    <td>0</td>
+                                    <td>July 16, 2021</td>
+                                    <td>Tech-Troubleshoot Session 2</td>
+                                    <td>Optional, attend if encounter any tech issues</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>July 19, 2021</td>
+                                    <td>Introduction to HTML5 and CSS</td>
+                                    <td>Introducing students to Text Editors and Syntax</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>July 21, 2021</td>
+                                    <td>Introduction to Scratch and JS</td>
+                                    <td>Indroducing students to Scratch coding environment</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>July 23, 2021</td>
+                                    <td>Introduction to Computer-Aided Design</td>
+                                    <td>Introducing students to Onshape and basic CAD skillsets</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>July 26, 2021</td>
+                                    <td>HTML5 and CSS Lesson 2</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>July 28, 2021</td>
+                                    <td>Scratch and JS Lesson 2</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>July 30, 2021</td>
+                                    <td>Computer-Aided Design Lesson 2</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>August 2, 2021</td>
+                                    <td>HTML5 and CSS Lesson 3</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>August 4, 2021</td>
+                                    <td>Scratch and JS Lesson 3</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>August 6, 2021</td>
+                                    <td>Computer-Aided Design Lesson 3</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>August 9, 2021</td>
+                                    <td>HTML5 and CSS Lesson 4</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>August 11, 2021</td>
+                                    <td>Scratch and JS Lesson 4</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>August 13, 2021</td>
+                                    <td>Computer-Aided Design Lesson 4</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <!--End Program Detail-->
+
         <!-- Interior Section -->
         <section class="interior-section style-three">
             <div class="auto-container">
@@ -219,8 +329,8 @@
                         <!-- Content Column -->
                         <div class="content-column col-lg-8 col-md-12 col-sm-12">
                             <div class="inner-column">
-                                <h2>Why Choose Us for Interior Work</h2>
-                                <div class="text">To give you a home that lasts, we bring you only the best in everything — quality raw materials, state-of-the-art manufacturing, rigorous quality checks, professional installations and transparent prices.</div>
+                                <h2>Why Choose Us for a Summer Program</h2>
+                                <div class="text">Free and Accessible. To give you a memorable online experience and build up crucial skillsets related to STEM.</div>
                                 <div class="row clearfix">
 
                                     <!-- Interior Block -->
@@ -229,7 +339,7 @@
                                             <div class="icon-box">
                                                 <span class="icon flaticon-award-1"></span>
                                             </div>
-                                            <h3>Superior Quality</h3>
+                                            <h3>Student-Led</h3>
                                         </div>
                                     </div>
 
@@ -239,7 +349,7 @@
                                             <div class="icon-box">
                                                 <span class="icon flaticon-answer"></span>
                                             </div>
-                                            <h3>Professional Team</h3>
+                                            <h3>Interactive Experience</h3>
                                         </div>
                                     </div>
 
@@ -249,14 +359,14 @@
                                             <div class="icon-box">
                                                 <span class="icon flaticon-hand"></span>
                                             </div>
-                                            <h3>Unmatched Warranty</h3>
+                                            <h3>Accessible</h3>
                                         </div>
                                     </div>
 
                                 </div>
 
-                                <div class="bold-text">Get in touch with us to design your dream home</div>
-                                <div class="column-text">Talk to our design expert and get your designs</div>
+                                <div class="bold-text">Take action and reach your potentials!</div>
+                                <div class="column-text"><a href="contact.html">Get in touch with us</a></div>
                             </div>
                         </div>
 
@@ -279,9 +389,9 @@
                             <div class="inner wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                                 <div class="content">
                                     <div class="count-outer count-box">
-                                        <span class="count-text" data-speed="2500" data-stop="8">0</span> Year
+                                        <span class="count-text" data-speed="2500" data-stop="7">0</span> Years
                                     </div>
-                                    <h4 class="counter-title">Material Warranty</h4>
+                                    <h4 class="counter-title">Robotics and STEM Prior Experiences </h4>
                                 </div>
                             </div>
                         </div>
@@ -291,9 +401,9 @@
                             <div class="inner wow fadeInLeft" data-wow-delay="300ms" data-wow-duration="1500ms">
                                 <div class="content">
                                     <div class="count-outer count-box alternate">
-                                        <span class="count-text" data-speed="3000" data-stop="2500">0</span>+
+                                        <span class="count-text" data-speed="3000" data-stop="100">0</span>+
                                     </div>
-                                    <h4 class="counter-title">Homes Completed</h4>
+                                    <h4 class="counter-title">STEM-Related Projects Completed</h4>
                                 </div>
                             </div>
                         </div>
@@ -303,9 +413,9 @@
                             <div class="inner wow fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="content">
                                     <div class="count-outer count-box">
-                                        <span class="count-text" data-speed="3000" data-stop="200">0</span>+
+                                        <span class="count-text" data-speed="3000" data-stop="20">0</span>+
                                     </div>
-                                    <h4 class="counter-title">Interior Designer</h4>
+                                    <h4 class="counter-title">Cumilative Robotics Tournament Experience</h4>
                                 </div>
                             </div>
                         </div>
@@ -315,9 +425,9 @@
                             <div class="inner wow fadeInLeft" data-wow-delay="900ms" data-wow-duration="1500ms">
                                 <div class="content">
                                     <div class="count-outer count-box">
-                                        <span class="count-text" data-speed="2500" data-stop="45">0</span> Days
+                                        <span class="count-text" data-speed="2500" data-stop="25">0</span>+
                                     </div>
-                                    <h4 class="counter-title">Project Delivery</h4>
+                                    <h4 class="counter-title">Robotics Sessions Planned and Executed</h4>
                                 </div>
                             </div>
                         </div>
