--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -211,13 +211,13 @@
         <!-- End Banner Section -->
 
         <!-- Call To Action Section -->
-        <section class="call-to-action-section" style="background-image: url(images/stem_mockup.jpg)">
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png)">
             <div class="auto-container">
                 <h2>Checkout our Summer Program</h2>
                 <div class="text">This summer, we offer free, accessible, online STEM Learning Program.<br> Sign up now and start learning!</div>
                 <a href="contact.html" class="theme-btn btn-style-two"><span class="txt">Contact us</span></a>
                 <a href="https://forms.gle/o6i49t4CGv2UE2EM9" class="theme-btn btn-style-two"><span class="txt">Apply now</span></a>
-                <div class="ftc-robot"><b>Image from American Petrolium Institute (https://www.api.org/news-policy-and-issues/blog/2017/11/28/advancing-our-society-with-stem)</b></div>
+                <div class="carbon-fiber"><b>Image from American Petrolium Institute (https://www.api.org/news-policy-and-issues/blog/2017/11/28/advancing-our-society-with-stem)</b></div>
             </div>
         </section>
         <!-- End Call To Action Section -->
